--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -70,7 +70,7 @@
 }
 
 .login100-form-title {
-  font-family: Poppins-Bold;
+  font-family: Noto-KR-Bold;
   font-size: 24px;
   color: #333333;
   line-height: 1.2;
@@ -82,7 +82,7 @@
 }
 
 .acc100-form-title {
-  font-family: Poppins-Bold;
+  font-family: Noto-KR-Bold;
   font-size: 24px;
   color: #333333;
   line-height: 1.2;
@@ -103,7 +103,7 @@
 }
 
 .input100 {
-  font-family: Poppins-Medium;
+  font-family: Noto-KR-Medium;
   font-size: 15px;
   line-height: 1.5;
   color: #666666;
@@ -317,7 +317,7 @@
   right: 8px;
   pointer-events: none;
 
-  font-family: Poppins-Medium;
+  font-family: Noto-KR-Medium;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
