--- a/src/assets/css/setting.css
+++ b/src/assets/css/setting.css
@@ -68,6 +68,7 @@
   width: 100%;
   font-size: 1rem;
   font-weight: 700;
+  /* font-family: Noto-KR-Regular; */
   letter-spacing: 1px;
 }
 .setting-config textarea {
